Fix page overflowing and/or not filling screen.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1251,23 +1251,7 @@ body.is-touch .wrapper.style3 {
   }
 }
 
-@media screen and (max-width: 980px) {
-  .wrapper {
-    padding: 4em 0 2em 0;
-  }
-}
 
-@media screen and (max-width: 736px) {
-  .wrapper {
-    padding: 3em 0 1em 0;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .wrapper {
-    padding: 2em 0 0.1em 0;
-  }
-}
 
 /* Banner */
 
@@ -1354,14 +1338,10 @@ span.specialtitletext {
 /* Main */
 
 #main {
-  padding-top: 4em;
+  padding-top: 6em;
 }
 
-@media screen and (max-width: 736px) {
-  #main {
-    padding-top: 2em;
-  }
-}
+
 
 /* Footer */
 
@@ -1574,6 +1554,12 @@ span.specialtitletext {
 }
 
 @media screen and (max-width: 980px) {
+  .\31 2u\28medium\29, .\31 2u\24\28medium\29 {
+    width: 100%;
+    clear: none;
+    margin-left: 0;
+
+}
   .\-6u\28medium\29 {
     margin-left: 50%;
   }
@@ -1587,6 +1573,9 @@ span.specialtitletext {
 }
 
 @media screen and (max-width: 480px) {
+  .\31 2u\24\28medium\29 + * {
+    clear: left;
+}
   .\31 2u\28xsmall\29,
   .\31 2u\24\28xsmall\29 {
     width: 100%;
